# 2021_microbiome_course_utils

./: .gitignore  README.md  pyproject.toml  setup.cfg  setup.py
course/: __init__.py  bootstrap.py  carve_shim.py  utils.py
