
[bumpversion]
current_version = 1.0.0
commit = True
tag = True

[metadata]
name = course
description = Helpers for the ISB Virtual Microbiome series.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/gibbons-lab/2021_microbiome_course_data
author = Christian Diener
author_email = mail@cdiener.com
license = Apache License 2.0
classifiers =
	Development Status :: 5 - Production/Stable
	Intended Audience :: Science/Research
	Topic :: Scientific/Engineering :: Bio-Informatics
	License :: OSI Approved :: Apache Software License
	Programming Language :: Python :: 3
	Programming Language :: Python :: 3.6
	Programming Language :: Python :: 3.7
	Programming Language :: Python :: 3.8
	Programming Language :: Python :: 3.9
keywords =
	microbiome
	microbiota
	modeling
	metabolism

[options]
packages = find:
zip_safe = True
python_requires = >=3.6
install_requires =
	cobra>=0.17.1
	jinja2>=2.10.0
	scikit-learn>=0.22.0
    seaborn>=0.11
	scipy>=1.0.0
	symengine>=0.6.1
	osqp>=0.6.2
    requests>=2.25
tests_require =
	coverage
	pytest
	pytest-cov

[options.packages.find]
exclude =
	docs
	tests

[options.entry_points]
console_scripts =
	carve = course.carve_shim:main

[bumpversion:file:setup.py]
search = version="{current_version}"
replace = version="{new_version}"

[tool:pytest]
filterwarnings =
	ignore::DeprecationWarning
	ignore::FutureWarning

[bdist_wheel]
universal = 0

[coverage:run]
source = course
branch = True

[coverage:report]
exclude_lines =
	pragma: no cover

	def __repr__
	if self\.debug

	raise AssertionError
	raise NotImplementedError

	if 0:
	if __name__ == .__main__.:
ignore_errors = True

[flake8]
exclude = tests/*, docs/*, versioneer.py, _version.py
max-line-length = 88
ignore =
	E203
	W503
	D202

[pydocstyle]
convention = numpy
